# dialogforge

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md  config.yaml  mkdocs.yml  objects.inv  pyproject.toml  seed_topics.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  onboarding.md
.github/workflows/: ci.yml  publish.yml
API_INDEX/: index.html
ARCHITECTURE/: index.html
CONFIG_REFERENCE/: index.html
HF_EXPORT/: index.html
OUTPUTS_AND_SCHEMAS/: index.html
RETRIEVAL_AND_PROMPTS/: index.html
data/seeds/: topics.yaml
docs/: API_INDEX.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIG_REFERENCE.md  DISTRIBUTED_RUNTIME.md  HF_EXPORT.md  OUTPUTS_AND_SCHEMAS.md  README.md  RETRIEVAL_AND_PROMPTS.md  contributing.md  getting-started.md  index.md  setup-installation.md
docs/javascripts/: mermaid-init.js  nav-defaults.js
docs/reference/: index.md
docs/reference/dlgforge/: __main__.md  cli.md  index.md
reference/: index.html
reference/dlgforge/: index.html
reference/dlgforge/cli/: index.html
reference/dlgforge/io/: index.html
reference/dlgforge/llm/: index.html
reference/dlgforge/pipeline/: index.html
release/: GITHUB_RELEASE_v0.1.0.md  LINKEDIN_POST.md  PINNED_ONBOARDING_ISSUE.md  RELEASE_CHECKLIST_2026-02-09.md
release_assets/sample_dataset/: sample_summary.json
release_assets/sample_dataset/hf_export/: README.md  dataset_stats.json
release_assets/sample_dataset/source/: conversations_sharegpt_judged.jsonl
site/: 404.html  index.html
site/CLI_REFERENCE/: index.html
site/DISTRIBUTED_RUNTIME/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/search/: search_index.json
site/setup-installation/: index.html
src/dlgforge/: __init__.py  __main__.py  cli.py
src/dlgforge/config/: __init__.py  defaults.py  loader.py  personas.py
tests/: test_config_llm_validation.py  test_config_schema_v3.py  test_distributed_bootstrap.py  test_distributed_provisioning.py  test_docstring_boilerplate.py  test_env_loader.py  test_hf_push_dataset_card.py  test_hf_push_sanitization.py  test_llm_client_litellm.py  test_llm_client_response_format.py  test_llm_routing.py  test_llm_settings_credentials.py  test_packaging.py
(+93 files in other folders)
