[project]
name = "dlgforge"
version = "0.1.0"
description = "a lightweight system for generating grounded synthetic multi-turn dialogues via rag, websearch, and tools"
authors = [{ name = "Abdelaziz Bounhar" }]
requires-python = ">=3.10,<3.14"
dependencies = [
  "openai>=1.40.0",
  "huggingface-hub>=0.24.0",
  "PyYAML>=6.0.1",
  "chromadb>=0.5.0",
  "requests>=2.31.0",
  "sentence-transformers>=2.7.0",
  "transformers>=4.51.0",
  "pypdf>=4.3.1"
]

[project.scripts]
dlgforge = "dlgforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlgforge"]
